--- a/BlackJack/CardsLibrary/CardsLibrary.csproj
+++ b/BlackJack/CardsLibrary/CardsLibrary.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
+    <Compile Include="IUpdatesFromServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomList.cs" />
     <Compile Include="Shoe.cs" />
