--- a/trunk/BlackJack/CardsLibrary/BlackJackLibrary.csproj
+++ b/trunk/BlackJack/CardsLibrary/BlackJackLibrary.csproj
@@ -41,7 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
-    <Compile Include="IUpdatesFromServer.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="PlayerState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomList.cs" />
     <Compile Include="Shoe.cs" />
