--- a/trunk/BlackJack/CardsLibrary/BlackJackLibrary.csproj
+++ b/trunk/BlackJack/CardsLibrary/BlackJackLibrary.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{4BC877F6-5236-4240-B264-5163C461102F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CardsLibrary</RootNamespace>
-    <AssemblyName>CardsLibrary</AssemblyName>
+    <RootNamespace>BlackJackLibrary</RootNamespace>
+    <AssemblyName>BlackJackLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Card.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="ICallback.cs" />
     <Compile Include="PlayerState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomList.cs" />
