--- a/trunk/BlackJack/BlackJack/App.config
+++ b/trunk/BlackJack/BlackJack/App.config
@@ -5,7 +5,7 @@
       <channels>
         <channel port="0" ref="http">
           <serverProviders>
-            <formatter ref="soap" typeFilterLevel="Full" />
+            <formatter ref="binary" typeFilterLevel="Full" />
           </serverProviders>
         </channel>
       </channels>
