--- a/trunk/BlackJack/BlackJackServer/BlackJackServer.csproj
+++ b/trunk/BlackJack/BlackJackServer/BlackJackServer.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BlackJackLibrary\BlackJackLibrary.csproj">
+      <Project>{4BC877F6-5236-4240-B264-5163C461102F}</Project>
+      <Name>BlackJackLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
