--- a/BlackJack/BlackJackServer/App.config
+++ b/BlackJack/BlackJackServer/App.config
@@ -3,16 +3,12 @@
   <system.runtime.remoting>
     <application>
       <service>
-        <wellknown mode="Singleton" type="CardsLibrary.Shoe, CardsLibrary" objectUri="shoe.soap" />
+        <wellknown mode="Singleton" type="BlackJackLibrary.Game, BlackJackLibrary"  objectUri="game.soap" />
       </service>
       <channels>
-        <channel port="10000" ref="http">
-          <!-- The following channel setting is required to 
-          enable callbacks. For security reasons the default 
-          setting (Low) won't permit the server to automatically
-          deserialize custom types like an UpdatesFromServer object. -->
+        <channel port="9999" ref="http">
           <serverProviders>
-            <formatter ref="soap" typeFilterLevel="Full" />
+            <formatter ref="binary" typeFilterLevel="Full" />
           </serverProviders>
         </channel>
       </channels>
