--- a/trunk/BlackJack/BlackJackServer/App.config
+++ b/trunk/BlackJack/BlackJackServer/App.config
@@ -3,7 +3,7 @@
   <system.runtime.remoting>
     <application>
       <service>
-        <wellknown mode="Singleton" type="BlackJackLibrary.Game, BlackJackLibrary"  objectUri="game.soap" />
+        <wellknown mode="Singleton" type="BlackJackLibrary.Game, BlackJackLibrary"  objectUri="game.binary" />
       </service>
       <channels>
         <channel port="9999" ref="http">
