Updated code for remoting configuration

--- a/BlackJack/BlackJack/App.config
+++ b/BlackJack/BlackJack/App.config
@@ -4,9 +4,9 @@
     <application>
       <channels>
         <channel port="0" ref="http">
-          <serverProviders>
+          <clientProviders>
             <formatter ref="binary" typeFilterLevel="Full" />
-          </serverProviders>
+          </clientProviders>
         </channel>
       </channels>
     </application>
