--- a/trunk/BlackJack/BlackJack/App.config
+++ b/trunk/BlackJack/BlackJack/App.config
@@ -3,7 +3,7 @@
   <system.runtime.remoting>
     <application>
       <channels>
-        <channel port="0" ref="http">
+        <channel port="0" ref="tcp">
           <clientProviders>
             <formatter ref="binary" typeFilterLevel="Full" />
           </clientProviders>
