--- a/trunk/BlackJack/BlackJackServer/App.config
+++ b/trunk/BlackJack/BlackJackServer/App.config
@@ -6,7 +6,7 @@
         <wellknown mode="Singleton" type="BlackJackLibrary.Game, BlackJackLibrary"  objectUri="game.binary" />
       </service>
       <channels>
-        <channel port="9999" ref="http">
+        <channel port="12222" ref="tcp">
           <serverProviders>
             <formatter ref="binary" typeFilterLevel="Full" />
           </serverProviders>
